# Aether-Ticketing

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  app.py  pyproject.toml  render.yaml  setup_windows.bat  tickets.xlsx  users.json
.github/workflows/: build-reports.yml  ci-api.yml  ci-web.yml  live-smoke.yml  secret-scan.yml  tests.yml
apps/api/: config.py  deps.py  main.py  security.py
apps/web/: eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
docker/: api.Dockerfile  docker-compose.yml  start-render.sh  web.Dockerfile
docs/architecture/: data-flow.md  decision-engine.md  incident-clustering.md  replay-flow.md  reporting.md  system-overview.md
docs/implementation/: api-contracts.md  migration-plan.md  phased-roadmap.md  rift-ml-integration.md
docs/product/: operator-workflows.md  portfolio-positioning.md  screen-map.md
domain/: enums.py  policies.py
domain/models/: action_run.py  asset.py  audit_record.py  decision_record.py  feature_vector.py  incident.py  recommendation.py  ticket.py
infrastructure/db/: base.py  session.py
infrastructure/logging/: feedback_learner.py
pipelines/decisions/: decision_hash.py  priority_policy.py  recommendation_engine.py  root_cause_rules.py  scoring.py  uncertainty_bands.py
pipelines/features/: ticket_features.py
pipelines/governance/: decision_card.py  decision_drift.py
pipelines/ingest/: delta_detector.py  excel_loader.py  row_normalizer.py  thread_cleaner.py
pipelines/reports/: csv_report.py  excel_report.py
pipelines/retrieval/: incident_clustering.py  similar_cases.py  ticket_graph.py
scripts/: _bootstrap_legacy_db.py  backfill_decisions.py  capture-readme-screenshots.mjs  dev_seed.py  generate_report.py  rebuild_similarity_index.py  seed_auth.py  verify-mobile.mjs
templates/: dashboard.html
tests/api/: conftest.py  factories.py  test_actions_endpoints.py  test_assets_endpoints.py  test_attachments_endpoints.py  test_auth_endpoints.py  test_auth_rate_limiter.py  test_auth_service.py  test_automation_endpoints.py  test_catalog_endpoints.py  test_comments_endpoints.py  test_decisions_endpoints.py  test_demo_guardrails.py  test_diagnostics_endpoint.py  test_endpoint_sweep.py  test_events_endpoints.py  test_governance_endpoints.py  test_incidents_endpoints.py  test_intelligence_health.py  test_metrics_endpoints.py  test_portal_endpoints.py  test_recommendations_endpoints.py  test_replay_endpoints.py  test_reports_endpoints.py  test_root_endpoints.py  test_tickets_endpoints.py
tests/decision/: test_scoring.py
tests/decisions/: test_decision_hash.py  (+1 more)
(+152 files in other folders)
