[project]
name = "aether"
version = "0.1.0"
description = "Operational Incident Intelligence and Decision Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "types-openpyxl>=3.1.5",
    "types-python-jose>=3.3.4",
    "types-passlib>=1.7.7",
    "fakeredis>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "domain", "infrastructure", "pipelines"]

[tool.hatch.build.targets.sdist]
include = [
    "apps",
    "domain",
    "infrastructure",
    "pipelines",
    "tests",
    "scripts",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true

[tool.alembic]
script_location = "infrastructure/db/migrations"
